deploy sin mail

--- a/eCommerce/src/main/resources/static/web/cart.html
+++ b/eCommerce/src/main/resources/static/web/cart.html
@@ -165,7 +165,7 @@
                             <div class="row">
                                 <div class="page-banner-content col">
 
-                                    <h1>Carrito de Compras</h1>
+                                    <h1 class="txtShadow">Carrito de Compras</h1>
 
 
                                 </div>
@@ -190,12 +190,12 @@
                                             <table>
                                                 <thead>
                                                     <tr>
-                                                        <th class="pro-thumbnail">Image</th>
-                                                        <th class="pro-title">Product</th>
-                                                        <th class="pro-price">Price</th>
-                                                        <th class="pro-quantity">Quantity</th>
+                                                        <th class="pro-thumbnail">Imagen</th>
+                                                        <th class="pro-title">Producto</th>
+                                                        <th class="pro-price">Precio</th>
+                                                        <th class="pro-quantity">Cantidad</th>
                                                         <th class="pro-subtotal">Total</th>
-                                                        <th class="pro-remove">Remove</th>
+                                                        <th class="pro-remove">Remover</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -229,7 +229,7 @@
                                     <div class="col-lg-8 col-md-7 col-12 mb-40">
                                         <div class="cart-buttons mb-30">
 
-                                            <a href="./shop.html">Continue Shopping</a>
+                                            <a href="./shop.html">Regresar a la tienda</a>
                                         </div>
 
                                     </div>
@@ -252,7 +252,7 @@
                                                 </tbody>
                                             </table>
                                             <div class="proceed-to-checkout section mt-30">
-                                                <a type="button" @click="redirigirse">Proceed to Checkout</a>
+                                                <a type="button" @click="redirigirse">Proceder al pago</a>
                                                 <div class="cart-total fix">
                                                 </div>
                                             </div>
