--- a/eCommerce/src/main/resources/static/web/cosplay.html
+++ b/eCommerce/src/main/resources/static/web/cosplay.html
@@ -152,7 +152,7 @@
             <div class="container">
                 <div class="row">
                     <div class="page-banner-content col">
-                        <h1>Cosplay</h1>
+                        <h1 class="txtShadow">Cosplay</h1>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,12 @@
                             </select>
                         </div>
                     </div>
-
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40" v-if="aux.length == 0">
+                        <div>
+                            <p> SIN RESULTADOS DE BÚSQUEDA</p>
+                            <p> NO SE HAN ENCONTRADO RESULTADOS PARA LA BÚSQUEDA: "{{search}}"</p>
+                        </div>
+                    </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-40" v-for="product in aux">
                         <div class="product-item">
                             <div class="product-inner">
@@ -211,7 +216,7 @@
                                         </h5>
                                     </div>
                                     <div class="content-right">
-                                        <span class="price">${{product.price}}</span>
+                                        <span class="price marginBoxL">${{product.price}}</span>
                                         <div class="lowStock parpadea" v-if="product.stock <= 3">
                                             Bajo stock
                                         </div>
