--- a/eCommerce/src/main/resources/static/web/login-register.html
+++ b/eCommerce/src/main/resources/static/web/login-register.html
@@ -142,7 +142,7 @@
 
                     <div class="col-lg-4 col-12 mb-40">
                         <div class="login-register-form-wrap">
-                            <h3>Login</h3>
+                            <h3>Ingresar</h3>
                             <form class="mb-30" @submit.prevent="postLogin()">
                                 <div class="row">
                                     <div class="col-12 mb-15"><input type="text" placeholder="Username or Email"
@@ -161,12 +161,12 @@
 
                     <div class="col-lg-6 col-12 mb-40 ms-auto">
                         <div class="login-register-form-wrap">
-                            <h3>Register</h3>
+                            <h3>Registrarse</h3>
                             <form @submit.prevent="postRegister()">
                                 <div class="row">
                                     <div class="col-md-6 col-12 mb-15"><input type="text" placeholder="Nombre"
                                             v-model="nameRegister"></div>
-                                    <div class="col-md-6 col-12 mb-15"><input type="text" placeholder="Your Last Name"
+                                    <div class="col-md-6 col-12 mb-15"><input type="text" placeholder="Apellido"
                                             v-model="lastNameRegister"></div>
                                     <div class="col-md-6 col-12 mb-15"><input type="email" placeholder="Email"
                                             v-model="emailRegister"></div>
