--- a/eCommerce/src/main/resources/static/web/my-account.html
+++ b/eCommerce/src/main/resources/static/web/my-account.html
@@ -47,8 +47,7 @@
                         <div class="col mt-10 mb-10 d-none d-md-flex">
                             <!-- Header Top Left Start -->
                             <div class="header-top-left">
-                                <p>Welcome to Origami</p>
-                                <p>Hotline: <a href="tel:2994137609">2994137609</a></p>
+                                <p>Bienvenido a Origami</p>
                             </div><!-- Header Top Left End -->
                         </div>
 
@@ -59,19 +58,12 @@
                                 <li><a href="#">Esp</a>
                                     <ul>
                                         <li><a href="#">english</a></li>
-                                        <li><a href="#">spanish</a></li>
-                                        <li><a href="#">france</a></li>
-                                        <li><a href="#">russian</a></li>
-                                        <li><a href="#">chinese</a></li>
                                     </ul>
                                 </li>
 
                                 <li><a href="#">$ARS</a>
                                     <ul>
-                                        <li><a href="#">pound</a></li>
                                         <li><a href="#">dollar</a></li>
-                                        <li><a href="#">euro</a></li>
-                                        <li><a href="#">yen</a></li>
                                     </ul>
                                 </li>
 
