--- a/eCommerce/src/main/resources/static/web/shop.html
+++ b/eCommerce/src/main/resources/static/web/shop.html
@@ -167,7 +167,7 @@
             <div class="container">
                 <div class="row">
                     <div class="page-banner-content col">
-                        <h1>General</h1>
+                        <h1 class="txtShadow">General</h1>
                     </div>
                 </div>
             </div>
