--- a/eCommerce/src/main/resources/static/web/checkout.html
+++ b/eCommerce/src/main/resources/static/web/checkout.html
@@ -277,8 +277,8 @@
                                     </div>
                                 </div>
                                 <button class="place-order" :class="{'bg-secondary': !checkboxChecked}" type="button"
-                                    @click.once="hacerCompra(product)" :disabled="!checkboxChecked && shippingType== '' && paymentMethods == ''">Place
-                                    order</button>
+                                    @click.once="hacerCompra(product)" :disabled="!checkboxChecked && shippingType== '' && paymentMethods == ''">Realizar Pago
+                                    </button>
                             </div>
                         </div>
                     </div>
