--- a/eCommerce/src/main/resources/static/web/index.html
+++ b/eCommerce/src/main/resources/static/web/index.html
@@ -96,7 +96,7 @@
 							<!-- Header Shop Links Start -->
 							<div class="header-top-right">
 
-								<p><a href="login-register.html">Registro</a><a href="login-register.html">Login</a></p>
+								<p><a href="login-register.html">Registro</a><a href="login-register.html">Ingresar</a></p>
 								<!-- <p><button type="button" @click="logOut" class="logOut">Logout<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-bar-right" viewBox="0 0 16 16">
 									<path fill-rule="evenodd" d="M6 8a.5.5 0 0 0 .5.5h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L12.293 7.5H6.5A.5.5 0 0 0 6 8zm-2.5 7a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5z"/>
 								</svg></button></p>  -->
@@ -164,8 +164,33 @@
 		<!-- Hero Section Start -->
 		<div class="hero-section section">
 
+			
+
 			<!-- Hero Slider Start -->
 			<div class="hero-slider hero-slider-three fix">
+
+				<div class="hero-item" style="background-image: url(assets/images/balenciaga_.gif)">
+					<div class="container">
+
+						<!-- Hero Content -->
+						<div class="hero-content-2">
+
+							<h1 class="txtShadow"> </h1>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+
+					
+								<br>
+								<br>
+							<a href="shop.html" class="videito">COMPRAR AHORA</a>
+
+						</div>
+
+					</div>
+				</div><!-- Hero Item End -->
 
 
 				<div class="hero-item" style="background-image: url(./assets/images/vanSinlogo.png)">
@@ -175,7 +200,7 @@
 						<div class="hero-content-2">
 							<h1 class="txtShadow">Bienvenidos a Origami!</h1>
 							<h1 class="txtShadow"> Envíos a todo el país!</h1>
-							<a href="./shop.html">SHOP NOW</a>
+							<a href="./shop.html">COMPRAR AHORA</a>
 
 						</div>
 
@@ -192,7 +217,7 @@
 							<h1 class="txtShadow">Bienvenidos a Origami!</h1>
 								
 								<h1>Tu tienda de animé</h1>
-							<a href="shop.html">SHOP NOW</a>
+							<a href="shop.html">COMPRAR AHORA</a>
 
 						</div>
 
@@ -499,7 +524,7 @@
 		<!-- Footer Top Section Start -->
 		<div class="footer-top-section section section-padding">
 			<div class="container">
-				<div class="d-flex justify-content-around">
+				<div class="row">
 
 					<div class="footer-widget col-lg-3 col-md-6 col-12 mb-40">
 						<h4 class="title">CONTACTO</h4>
