--- a/eCommerce/src/main/resources/static/web/login-register.html
+++ b/eCommerce/src/main/resources/static/web/login-register.html
@@ -55,13 +55,13 @@
                         <div class="col mt-10 mb-10">
                             <!-- Header Language Currency Start -->
                             <ul class="header-lan-curr">
-                                <li><a href="#">eng</a>
+                                <li><a href="#">es</a>
                                     <ul>
                                         <li><a href="#">english</a></li>
                                         <li><a href="#">spanish</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">$usd</a>
+                                <li><a href="#">$ars</a>
                                     <ul>
                                         <li><a href="#">dollar</a></li>
                                     </ul>
@@ -71,7 +71,7 @@
                         <div class="col mt-10 mb-10">
                             <!-- Header Shop Links Start -->
                             <div class="header-top-right">
-                                <p><a href="login-register.html">Registro</a><a href="login-register.html">Login</a></p>
+                                <p><a href="login-register.html">Registro</a><a href="login-register.html">Ingresar</a></p>
                             </div><!-- Header Shop Links End -->
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul>
-                                        <li><a href="index.html">HOME</a>
+                                        <li><a href="index.html">INICIO</a>
                                         </li>
                                         <li><a href="shop.html">Tienda</a>
                                             <ul class="sub-menu">
@@ -111,7 +111,7 @@
                                                 <li><a href="cosplay.html">Cosplay</a></li>
                                             </ul>
                                         </li>
-                                        <li class="active"><a href="contact.html">Contactanos</a></li>
+                                        <li><a href="contact.html">Contactanos</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -129,7 +129,7 @@
             <div class="container">
                 <div class="row">
                     <div class="page-banner-content col">
-                        <h1>Login/Register</h1>
+                        <h1>Ingresar/Registar</h1>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                                             v-model="mail"></div>
                                     <div class="col-12 mb-15"><input type="password" placeholder="Contraseña"
                                             v-model="password"></div>
-                                    <div class="col-12"><input type="submit" value="Login"></div>
+                                    <div class="col-12"><input type="submit" value="Ingresar"></div>
                                 </div>
                             </form>
                         </div>
@@ -174,7 +174,7 @@
                                             v-model="passwordRegister"></div>
                                     <div class="col-md-6 col-12 mb-15"><input type="number"
                                             placeholder="Numero de Telefono" v-model="cellPhoneRegister"></div>
-                                    <div class="col-md-6 col-12"><input type="submit" value="Register"></div>
+                                    <div class="col-md-6 col-12"><input type="submit" value="Registro"></div>
                                 </div>
                             </form>
                         </div>
